# kde-learn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
doc/: conf.py  getting_started.rst  index.rst  kernels.rst
docs/: bandwidth_selection.rst  ckde.rst  conditional_api.rst  conf.py  cutils.rst  density_estimation_desc.rst  getting_started.rst  index.rst  kde.rst  kde_desc.rst  kde_funcs.rst  kernels.rst  metrics.rst  procedures.rst  tasks.rst  unconditional_api.rst  utils.rst
kdelearn/: __init__.py  bandwidth_selection.py  cbw_selection.pyx  ckde.py  ckde_tasks.py  cutils.pyx  kde.py  kde_funcs.py  kde_tasks.py  kernels.py  metrics.py  utils.py
notebooks/: KdeClassifier_performance.ipynb  KdeOutlierDetector.ipynb  Kde_performance.ipynb  PhD_notes.ipynb  PhD_notes_ckde.ipynb  PhD_notes_kde.ipynb  Untitled_old.ipynb  ckde.ipynb  kde.ipynb  kernels.ipynb  seminar.ipynb  seminar2.ipynb  syntetic_dataset.ipynb  syntetic_dataset_classification.ipynb  synthetic_dataset_classification_pro.ipynb  synthetic_dataset_clustering.ipynb  synthetic_dataset_outliers.ipynb  synthetic_dataset_outliers_big.ipynb  synthetic_dataset_y*=-2.ipynb  synthetic_dataset_y*=0.ipynb  synthetic_dataset_y*=2.ipynb  tmp_y*=-1.ipynb  tmp_y*=-1_b.ipynb  tmp_y*=-1_r_analysis.ipynb  tmp_y*=-1_r_analysis_2.ipynb  tmp_y*=-2.ipynb  tmp_y*=-2_b.ipynb  tmp_y*=-2_r_analysis.ipynb  tmp_y*=-2_r_analysis_2.ipynb  tmp_y*=0.ipynb  tmp_y*=0_b.ipynb  tmp_y*=0_r_analysis.ipynb  tmp_y*=0_r_analysis_2.ipynb  (+16 more)
tests/: conftest.py  (+3 more)
(+81 files in other folders)
