[metadata]
description-file = README.md


[isort]
line_length = 99
profile = black
filter_files = True


[flake8]
max_line_length = 99
doctests = True
show_source = True
format = pylint
ignore =
    F401  # Module imported but unused
    W504  # Line break occurred after a binary operator
    F841  # Local variable name is assigned to but never used
    F403  # from module import *
    E501  # Line too long
exclude =
    .git
    __pycache__
    tests/*
    notebooks/*